--- a/src/assets/css/resume.css
+++ b/src/assets/css/resume.css
@@ -72,7 +72,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #BD5D38;
+  background-color: #F44336;
 }
 
 .dev-icons {
@@ -80,7 +80,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  color: #F44336;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -176,17 +176,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #2196F3 !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #2196F3 !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #2196F3;
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: #1565C0;
 }
